--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script async src="{{{appclient}}}"></script>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@freshworks/crayons@v4/css/crayons-min.css"
+    />
+    <!-- This does not work -->
+    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@freshworks/crayons"></script> -->
   </head>
 
   <body>
     <div class="main">
+      <div id="product-list"></div>
     </div>
   </body>
 
   <script defer src="scripts/app.js"></script>
-  <script async type="module" src="https://unpkg.com/@freshworks/crayons@3/dist/crayons/crayons.esm.js"></script>
-  <script async nomodule src="https://unpkg.com/@freshworks/crayons@3/dist/crayons/crayons.js"></script>
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/npm/@freshworks/crayons@v4/dist/crayons/crayons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://cdn.jsdelivr.net/npm/@freshworks/crayons@v4/dist/crayons/crayons.js"
+  ></script>
 </html>
