--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script async src="{{{appclient}}}"></script>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@freshworks/crayons@v4/css/crayons-min.css"
+    />
   </head>
 
   <body>
     <div class="main">
-      <p>Utilize this template code to build your App</p>
-      <p id="apptext"></p>
+      <div id="product-container"></div>
     </div>
   </body>
 
